tests/baselines/reference/augmentedTypesInterface.errors.txt
==== tests/cases/compiler/augmentedTypesInterface.ts (2 errors) ====
    // interface then interface
    
    interface i {
        foo(): void;
    }
    
    interface i {
        bar(): number;
    }
    
    // interface then class
    interface i2 {
        foo(): void;
    }
    
    class i2 {  // error
          ~~
!!! augmentedTypesInterface.ts(16,7): error TS2000: Duplicate identifier 'i2'. Additional locations:
!!! 	augmentedTypesInterface.ts(12,1)
        bar() {
            return 1;
        }
    }
    
    // interface then enum
    interface i3 {
        foo(): void;
    }
    enum i3 { One }; // error
         ~~
!!! augmentedTypesInterface.ts(26,6): error TS2000: Duplicate identifier 'i3'. Additional locations:
!!! 	augmentedTypesInterface.ts(23,1)
    
    // interface then import
    interface i4 {
        foo(): void;
    }
    
    //import i4 = require('');  // error